libs/data-mapper/src/lib/parser/definition/MapParser.js
// Generated from MapParser.g4 by ANTLR 4.10.1
// jshint ignore: start
import MapParserListener from './MapParserListener.js';
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.PredictionContextCache();

export default class MapParser extends antlr4.Parser {
  static grammarFileName = 'MapParser.g4';
  static literalNames = [
    null,
    null,
    "'$'",
    "'/'",
    "'('",
    "')'",
    "'['",
    "']'",
    "'-'",
    "'+'",
    "'.'",
    "'*'",
    "'..'",
    "'@'",
    "','",
    "'|'",
    "'<'",
    "'>'",
    "'<='",
    "'>='",
    "':'",
    "'::'",
    "'''",
    "'\"'",
    "'and'",
    "'or'",
    "'div'",
    "'mod'",
    "'='",
    "'!='",
    null,
    "'null'",
    "'false'",
    "'true'",
    "'nil'",
  ];
  static symbolicNames = [
    null,
    'Number',
    'DOL',
    'PATHSEP',
    'LPAR',
    'RPAR',
    'LBRAC',
    'RBRAC',
    'MINUS',
    'PLUS',
    'DOT',
    'MUL',
    'DOTDOT',
    'AT',
    'COMMA',
    'UnionOp',
    'LESS',
    'MORE_',
    'LE',
    'GE',
    'COLON',
    'CC',
    'APOS',
    'QUOT',
    'AND',
    'OR',
    'DIV',
    'MOD',
    'EQ',
    'NE',
    'System',
    'NULL_',
    'FALSE_',
    'TRUE_',
    'NIL',
    'Literal',
    'Whitespace',
    'NCName',
  ];
  static ruleNames = [
    'main',
    'exp',
    'constant',
    'selector',
    'selectorFragment',
    'nodeName',
    'nsPrefix',
    'ndName',
    'filter',
    'index',
    'variableRef',
    'varName',
    'functionCall',
    'parameter',
    'functionName',
    'operatorExp',
    'orExp',
    'andExp',
    'relationalExp',
    'additiveExp',
    'multiplicativeExp',
    'operand',
    'unionExp',
  ];

  constructor(input) {
    super(input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = MapParser.ruleNames;
    this.literalNames = MapParser.literalNames;
    this.symbolicNames = MapParser.symbolicNames;
  }

  get atn() {
    return atn;
  }

  main() {
    let localctx = new MainContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MapParser.RULE_main);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 46;
      this.exp();
      this.state = 47;
      this.match(MapParser.EOF);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  exp() {
    let localctx = new ExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MapParser.RULE_exp);
    try {
      this.state = 58;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 0, this._ctx);
      switch (la_) {
        case 1:
          localctx = new ConstExpContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          this.state = 49;
          this.constant();
          break;

        case 2:
          localctx = new VarExpContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          this.state = 50;
          this.variableRef();
          break;

        case 3:
          localctx = new FunctionCallExpContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          this.state = 51;
          this.functionCall();
          break;

        case 4:
          localctx = new BracketExpContext(this, localctx);
          this.enterOuterAlt(localctx, 4);
          this.state = 52;
          this.match(MapParser.LPAR);
          this.state = 53;
          this.exp();
          this.state = 54;
          this.match(MapParser.RPAR);
          break;

        case 5:
          localctx = new SelectorExpContext(this, localctx);
          this.enterOuterAlt(localctx, 5);
          this.state = 56;
          this.selector();
          break;

        case 6:
          localctx = new OprExpContext(this, localctx);
          this.enterOuterAlt(localctx, 6);
          this.state = 57;
          this.operatorExp();
          break;
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  constant() {
    let localctx = new ConstantContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MapParser.RULE_constant);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 60;
      _la = this._input.LA(1);
      if (!(_la === MapParser.Number || _la === MapParser.System || _la === MapParser.Literal)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  selector() {
    let localctx = new SelectorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MapParser.RULE_selector);
    var _la = 0; // Token type
    try {
      this.state = 78;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case MapParser.PATHSEP:
        case MapParser.DOT:
        case MapParser.MUL:
        case MapParser.DOTDOT:
        case MapParser.AT:
        case MapParser.NCName:
          this.enterOuterAlt(localctx, 1);
          this.state = 63;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if (_la === MapParser.PATHSEP) {
            this.state = 62;
            localctx.absolute = this.match(MapParser.PATHSEP);
          }

          this.state = 65;
          this.selectorFragment();
          this.state = 70;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          while (_la === MapParser.PATHSEP) {
            this.state = 66;
            this.match(MapParser.PATHSEP);
            this.state = 67;
            this.selectorFragment();
            this.state = 72;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
          }
          break;
        case MapParser.DOL:
          this.enterOuterAlt(localctx, 2);
          this.state = 73;
          this.match(MapParser.DOL);
          this.state = 74;
          this.match(MapParser.LPAR);
          this.state = 75;
          this.selector();
          this.state = 76;
          this.match(MapParser.RPAR);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  selectorFragment() {
    let localctx = new SelectorFragmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MapParser.RULE_selectorFragment);
    var _la = 0; // Token type
    try {
      this.state = 93;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case MapParser.MUL:
        case MapParser.AT:
        case MapParser.NCName:
          this.enterOuterAlt(localctx, 1);
          this.state = 81;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if (_la === MapParser.AT) {
            this.state = 80;
            this.match(MapParser.AT);
          }

          this.state = 83;
          this.nodeName();
          this.state = 89;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 5, this._ctx);
          if (la_ === 1) {
            this.state = 84;
            this.index();
          } else if (la_ === 2) {
            this.state = 85;
            this.filter();
          } else if (la_ === 3) {
            this.state = 86;
            this.filter();
            this.state = 87;
            this.index();
          }
          break;
        case MapParser.DOTDOT:
          this.enterOuterAlt(localctx, 2);
          this.state = 91;
          this.match(MapParser.DOTDOT);
          break;
        case MapParser.DOT:
          this.enterOuterAlt(localctx, 3);
          this.state = 92;
          this.match(MapParser.DOT);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  nodeName() {
    let localctx = new NodeNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MapParser.RULE_nodeName);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 98;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 7, this._ctx);
      if (la_ === 1) {
        this.state = 95;
        this.nsPrefix();
        this.state = 96;
        this.match(MapParser.COLON);
      }
      this.state = 102;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case MapParser.NCName:
          this.state = 100;
          this.ndName();
          break;
        case MapParser.MUL:
          this.state = 101;
          this.match(MapParser.MUL);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  nsPrefix() {
    let localctx = new NsPrefixContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, MapParser.RULE_nsPrefix);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 104;
      this.match(MapParser.NCName);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  ndName() {
    let localctx = new NdNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, MapParser.RULE_ndName);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 106;
      this.match(MapParser.NCName);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  filter() {
    let localctx = new FilterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, MapParser.RULE_filter);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 108;
      this.match(MapParser.LBRAC);
      this.state = 112;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 9, this._ctx);
      switch (la_) {
        case 1:
          this.state = 109;
          this.functionCall();
          break;

        case 2:
          this.state = 110;
          this.selector();
          break;

        case 3:
          this.state = 111;
          this.operatorExp();
          break;
      }
      this.state = 114;
      this.match(MapParser.RBRAC);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  index() {
    let localctx = new IndexContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, MapParser.RULE_index);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 116;
      this.match(MapParser.LBRAC);
      this.state = 117;
      this.match(MapParser.Number);
      this.state = 118;
      this.match(MapParser.RBRAC);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  variableRef() {
    let localctx = new VariableRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, MapParser.RULE_variableRef);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 120;
      this.match(MapParser.DOL);
      this.state = 121;
      this.varName();
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  varName() {
    let localctx = new VarNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, MapParser.RULE_varName);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 123;
      this.match(MapParser.NCName);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  functionCall() {
    let localctx = new FunctionCallContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, MapParser.RULE_functionCall);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 125;
      this.functionName();
      this.state = 126;
      this.match(MapParser.LPAR);
      this.state = 135;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (
        ((_la & ~0x1f) == 0 &&
          ((1 << _la) &
            ((1 << MapParser.Number) |
              (1 << MapParser.DOL) |
              (1 << MapParser.PATHSEP) |
              (1 << MapParser.LPAR) |
              (1 << MapParser.DOT) |
              (1 << MapParser.MUL) |
              (1 << MapParser.DOTDOT) |
              (1 << MapParser.AT) |
              (1 << MapParser.System))) !==
            0) ||
        _la === MapParser.Literal ||
        _la === MapParser.NCName
      ) {
        this.state = 127;
        this.parameter();
        this.state = 132;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === MapParser.COMMA) {
          this.state = 128;
          this.match(MapParser.COMMA);
          this.state = 129;
          this.parameter();
          this.state = 134;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }

      this.state = 137;
      this.match(MapParser.RPAR);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  parameter() {
    let localctx = new ParameterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, MapParser.RULE_parameter);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 139;
      this.exp();
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  functionName() {
    let localctx = new FunctionNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 28, MapParser.RULE_functionName);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 142;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === MapParser.DOL) {
        this.state = 141;
        this.match(MapParser.DOL);
      }

      this.state = 144;
      this.match(MapParser.NCName);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  operatorExp() {
    let localctx = new OperatorExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 30, MapParser.RULE_operatorExp);
    try {
      this.state = 148;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 13, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 146;
          this.orExp();
          break;

        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 147;
          this.unionExp();
          break;
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  orExp() {
    let localctx = new OrExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 32, MapParser.RULE_orExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 150;
      this.andExp();
      this.state = 155;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === MapParser.OR) {
        this.state = 151;
        this.match(MapParser.OR);
        this.state = 152;
        this.andExp();
        this.state = 157;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  andExp() {
    let localctx = new AndExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 34, MapParser.RULE_andExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 158;
      this.relationalExp();
      this.state = 163;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === MapParser.AND) {
        this.state = 159;
        this.match(MapParser.AND);
        this.state = 160;
        this.relationalExp();
        this.state = 165;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  relationalExp() {
    let localctx = new RelationalExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 36, MapParser.RULE_relationalExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 166;
      this.additiveExp();
      this.state = 169;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (
        (_la & ~0x1f) == 0 &&
        ((1 << _la) &
          ((1 << MapParser.LESS) |
            (1 << MapParser.MORE_) |
            (1 << MapParser.LE) |
            (1 << MapParser.GE) |
            (1 << MapParser.EQ) |
            (1 << MapParser.NE))) !==
          0
      ) {
        this.state = 167;
        _la = this._input.LA(1);
        if (
          !(
            (_la & ~0x1f) == 0 &&
            ((1 << _la) &
              ((1 << MapParser.LESS) |
                (1 << MapParser.MORE_) |
                (1 << MapParser.LE) |
                (1 << MapParser.GE) |
                (1 << MapParser.EQ) |
                (1 << MapParser.NE))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
        this.state = 168;
        this.additiveExp();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  additiveExp() {
    let localctx = new AdditiveExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 38, MapParser.RULE_additiveExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 171;
      this.multiplicativeExp();
      this.state = 176;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === MapParser.MINUS || _la === MapParser.PLUS) {
        this.state = 172;
        _la = this._input.LA(1);
        if (!(_la === MapParser.MINUS || _la === MapParser.PLUS)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
        this.state = 173;
        this.multiplicativeExp();
        this.state = 178;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  multiplicativeExp() {
    let localctx = new MultiplicativeExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 40, MapParser.RULE_multiplicativeExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 179;
      this.operand();
      this.state = 184;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la & ~0x1f) == 0 && ((1 << _la) & ((1 << MapParser.MUL) | (1 << MapParser.DIV) | (1 << MapParser.MOD))) !== 0) {
        this.state = 180;
        _la = this._input.LA(1);
        if (!((_la & ~0x1f) == 0 && ((1 << _la) & ((1 << MapParser.MUL) | (1 << MapParser.DIV) | (1 << MapParser.MOD))) !== 0)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
        this.state = 181;
        this.operand();
        this.state = 186;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  operand() {
    let localctx = new OperandContext(this, this._ctx, this.state);
    this.enterRule(localctx, 42, MapParser.RULE_operand);
    try {
      this.state = 195;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 19, this._ctx);
      switch (la_) {
        case 1:
          localctx = new ConstOpContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          this.state = 187;
          this.constant();
          break;

        case 2:
          localctx = new VarOpContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          this.state = 188;
          this.variableRef();
          break;

        case 3:
          localctx = new FunctionCallOpContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          this.state = 189;
          this.functionCall();
          break;

        case 4:
          localctx = new BracketOpContext(this, localctx);
          this.enterOuterAlt(localctx, 4);
          this.state = 190;
          this.match(MapParser.LPAR);
          this.state = 191;
          this.exp();
          this.state = 192;
          this.match(MapParser.RPAR);
          break;

        case 5:
          localctx = new SelectorOpContext(this, localctx);
          this.enterOuterAlt(localctx, 5);
          this.state = 194;
          this.selector();
          break;
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  unionExp() {
    let localctx = new UnionExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 44, MapParser.RULE_unionExp);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 197;
      this.selector();
      this.state = 200;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      do {
        this.state = 198;
        this.match(MapParser.UnionOp);
        this.state = 199;
        this.selector();
        this.state = 202;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      } while (_la === MapParser.UnionOp);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
}

MapParser.EOF = antlr4.Token.EOF;
MapParser.Number = 1;
MapParser.DOL = 2;
MapParser.PATHSEP = 3;
MapParser.LPAR = 4;
MapParser.RPAR = 5;
MapParser.LBRAC = 6;
MapParser.RBRAC = 7;
MapParser.MINUS = 8;
MapParser.PLUS = 9;
MapParser.DOT = 10;
MapParser.MUL = 11;
MapParser.DOTDOT = 12;
MapParser.AT = 13;
MapParser.COMMA = 14;
MapParser.UnionOp = 15;
MapParser.LESS = 16;
MapParser.MORE_ = 17;
MapParser.LE = 18;
MapParser.GE = 19;
MapParser.COLON = 20;
MapParser.CC = 21;
MapParser.APOS = 22;
MapParser.QUOT = 23;
MapParser.AND = 24;
MapParser.OR = 25;
MapParser.DIV = 26;
MapParser.MOD = 27;
MapParser.EQ = 28;
MapParser.NE = 29;
MapParser.System = 30;
MapParser.NULL_ = 31;
MapParser.FALSE_ = 32;
MapParser.TRUE_ = 33;
MapParser.NIL = 34;
MapParser.Literal = 35;
MapParser.Whitespace = 36;
MapParser.NCName = 37;

MapParser.RULE_main = 0;
MapParser.RULE_exp = 1;
MapParser.RULE_constant = 2;
MapParser.RULE_selector = 3;
MapParser.RULE_selectorFragment = 4;
MapParser.RULE_nodeName = 5;
MapParser.RULE_nsPrefix = 6;
MapParser.RULE_ndName = 7;
MapParser.RULE_filter = 8;
MapParser.RULE_index = 9;
MapParser.RULE_variableRef = 10;
MapParser.RULE_varName = 11;
MapParser.RULE_functionCall = 12;
MapParser.RULE_parameter = 13;
MapParser.RULE_functionName = 14;
MapParser.RULE_operatorExp = 15;
MapParser.RULE_orExp = 16;
MapParser.RULE_andExp = 17;
MapParser.RULE_relationalExp = 18;
MapParser.RULE_additiveExp = 19;
MapParser.RULE_multiplicativeExp = 20;
MapParser.RULE_operand = 21;
MapParser.RULE_unionExp = 22;

class MainContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MapParser.RULE_main;
  }

  exp() {
    return this.getTypedRuleContext(ExpContext, 0);
  }

  EOF() {
    return this.getToken(MapParser.EOF, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterMain(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitMain(this);
    }
  }
}

class ExpContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MapParser.RULE_exp;
  }

  copyFrom(ctx) {
    super.copyFrom(ctx);
  }
}

class FunctionCallExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  functionCall() {
    return this.getTypedRuleContext(FunctionCallContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterFunctionCallExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitFunctionCallExp(this);
    }
  }
}

MapParser.FunctionCallExpContext = FunctionCallExpContext;

class OprExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  operatorExp() {
    return this.getTypedRuleContext(OperatorExpContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterOprExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitOprExp(this);
    }
  }
}

MapParser.OprExpContext = OprExpContext;

class VarExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  variableRef() {
    return this.getTypedRuleContext(VariableRefContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterVarExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitVarExp(this);
    }
  }
}

MapParser.VarExpContext = VarExpContext;

class BracketExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  LPAR() {
    return this.getToken(MapParser.LPAR, 0);
  }

  exp() {
    return this.getTypedRuleContext(ExpContext, 0);
  }

  RPAR() {
    return this.getToken(MapParser.RPAR, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterBracketExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitBracketExp(this);
    }
  }
}

MapParser.BracketExpContext = BracketExpContext;

class ConstExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  constant() {
    return this.getTypedRuleContext(ConstantContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterConstExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitConstExp(this);
    }
  }
}

MapParser.ConstExpContext = ConstExpContext;

class SelectorExpContext extends ExpContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  selector() {
    return this.getTypedRuleContext(SelectorContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.enterSelectorExp(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof MapParserListener) {
      listener.exitSelectorExp(this);
    }
  }
}

MapParser.SelectorExpContext = SelectorExpContext;
